--- a/qtgui/dockfft.ui
+++ b/qtgui/dockfft.ui
@@ -563,6 +563,31 @@
           </property>
          </widget>
         </item>
+        <item row="4" column="4">
+         <widget class="QPushButton" name="peakAutoJumpButton">
+          <property name="minimumSize">
+           <size>
+            <width>28</width>
+            <height>28</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>32</width>
+            <height>32</height>
+           </size>
+          </property>
+          <property name="toolTip">
+           <string>Enable autojump to the strong peak</string>
+          </property>
+          <property name="text">
+           <string>A</string>
+          </property>
+          <property name="checkable">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
        </layout>
        <zorder>zoomLAbel</zorder>
        <zorder>fftAvgLabel</zorder>
@@ -583,6 +608,7 @@
        <zorder>peakHoldButton</zorder>
        <zorder>colorPicker</zorder>
        <zorder>fillButton</zorder>
+       <zorder>peakAutoJumpButton</zorder>
       </widget>
      </widget>
     </item>
